[gd_scene load_steps=50 format=2]

[ext_resource path="res://Effects/EnemyDeathEffect.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy Base/EnemyBase.gd" type="Script" id=2]
[ext_resource path="res://UI/EnemyHealthUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=10]
[ext_resource path="res://Enemies/andromalius-57x88.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 57, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 114, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 171, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 228, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 285, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 342, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 399, 0, 57, 88 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 228, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 285, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 342, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 399, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 171, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 114, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 57, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 0, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 0, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 57, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 114, 176, 57, 88 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 171, 176, 57, 88 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "X Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Y Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Rotate AntiHorário",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Rotate Horário",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=22]
radius = 20.0
height = 8.35178

[sub_resource type="CircleShape2D" id=23]
radius = 22.3607

[sub_resource type="Animation" id=24]
resource_name = "Death"

[sub_resource type="Animation" id=25]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=26]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "DeathEffect",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=38]
radius = 180.947

[node name="EnemyBase" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 44.1323 )
scale = Vector2( 1.375, 1.4 )
texture = ExtResource( 10 )

[node name="Animations" type="Sprite" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "X Walk"
frame = 3
playing = true

[node name="EnemyStats" parent="." instance=ExtResource( 8 )]
position = Vector2( 0.647079, 16.5002 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="EnemyStats" index="0"]
shape = SubResource( 22 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 44.0191 )
shape = SubResource( 23 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 24 )
anims/IncencibilityStart = SubResource( 25 )
anims/InvencibilityEnd = SubResource( 26 )
__meta__ = {
"_editor_description_": ""
}

[node name="EnemyDeathEffect" type="AnimatedSprite" parent="."]
frames = SubResource( 37 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
collision_mask = 18

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 38 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.647079, 16.1767 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 22 )

[node name="moveAwayTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="stopTimer" type="Timer" parent="."]

[node name="EnemyHealthUI" parent="." instance=ExtResource( 3 )]
margin_left = -272.556
margin_top = -65.8827
margin_right = -186.556
margin_bottom = -51.8827

[node name="Stats" parent="." instance=ExtResource( 9 )]
[connection signal="deathAnimationCompleted" from="." to="." method="_on_EnemyTest_deathAnimationCompleted"]
[connection signal="health_changed" from="." to="EnemyHealthUI" method="_on_EnemyBase_health_changed"]
[connection signal="area_entered" from="EnemyStats" to="." method="_on_EnemyStats_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="EnemyStats" method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="moveAwayTimer" to="." method="_on_moveAwayTimer_timeout"]
[connection signal="timeout" from="stopTimer" to="." method="_on_stopTimer_timeout"]

[editable path="EnemyStats"]

[editable path="PlayerDetectionZone"]

[editable path="Hurtbox"]
